cholera 0.7.9.9014
==================

- use latlongAddress() and latlongRoadSegments() in latlongOrthoProj().
- use latlongRoadSegments() in latlongOrthoProjPumps().


cholera 0.7.9.9013
==================

- use partitionRoads() in latlongRoads().
- match and append lat-long for duplicated "roads" points.
- archive partitionRoadEndpoints() and related functions.


cholera 0.7.9.9012
==================

- add amended segmentDistance() auxilliary function.
- use segmentDistance() in latlongRoadSegments().
- amend latlongPumps() TIFF file names.
- temporarily export segmentDistance().


cholera 0.7.9.9011
==================

- use latlongRoads() in latlongRoadSegments().


cholera 0.7.9.9010
==================

- archive latlongCoordinates() and latlongCoordinatesB().
- rename latlongCoordinatesC() to latlongCoordinates().


cholera 0.7.9.9009
==================

- add roadPointDistance().
- add thresholdRoadGraph().
- add pointOverlapRoad().
- add openRoadTriads().
- add partitionRoads().


cholera 0.7.9.9008
==================

- add partitionStringGraph().
- add thresholdAddressGraph().
- add openTriads().
- add starGraph().
- rename partitionStringGraph() to partitionEvenString().
- add partitionOddString().
- add partitionAddresses().
- add latlongAddress().


cholera 0.7.9.9007
==================

- add pointOverlap().


cholera 0.7.9.9006
==================

- add roadHighlight().


cholera 0.7.9.9005
==================

- add/set segmentLocator(cex.text = 0.67).


cholera 0.7.9.9004
==================

- add caseDistance().


cholera 0.7.9.9003
==================

- fix/change unitMeter(distance.unit = "native").


cholera 0.7.9.9002
==================

- add/use ortho.rect as polygon filter.
- add orthogonalRectanlge() and associated functions.
- use "id" instead of "id2" in rotatePoint(dataset = "roads").
- add partitionRoadEndpoints().
- add latlongRoads().


cholera 0.7.9.9001
==================

- add latlongCoordinatesC().


cholera 0.7.9.9000