@@ -3,6 +3,8 @@ cholera 0.7.9.9014
 
 - use latlongAddress() and latlongRoadSegments() in latlongOrthoProj().
 - use latlongRoadSegments() in latlongOrthoProjPumps().
+- use latlongRoadSegments() in latlongEmbed().
+- use amended latlongEmbed() in latlongNeighborhoodData().
 
 
 cholera 0.7.9.9013
